<resources>
    <string name="app_name">App Cuentas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblTitRegistrarMovimiento">Registrar Movimiento</string>
    <string name="lblProducto">Producto :</string>
    <string name="lblPrecio">Precio :</string>
    <string name="btnGuardar">Guardar</string>
    <string name="title_registrar_producto">Registrar Producto</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="descripcion_producto">Descripcion Producto</string>
    <string name="costo_producto">Costo Producto</string>
    <string name="precio_venta">Precio Venta</string>
    <string name="cantidad_producto">Cantidad Producto</string>
    <string name="title_listado_productos">Listado de Productos</string>
    <string name="listado_de_movimientos">Listado de Movimientos</string>

    <!-- Layout Registrar Movimiento -->
    <string name="mov_Cantidad">Cantidad</string>
    <string name="mov_descuento">Descuento</string>
    <string name="mov_total">Total </string>
    <string name="Prod_cantidad">Cantidad</string>
    <string name="prod_precio">Precio</string>
    <string name="prod_costo">Costo</string>
    <string name="apert_title_listado_de_aperturas">Listado de Aperturas</string>
    <string name="apert_fecha_inicio_apertura">Fecha Inicio Apertura</string>
    <string name="apert_estado_apertura">Estado Apertura</string>
    <string name="apert_sincronizado">Sincronizado</string>
    <string name="apert_estado">Estado</string>
    <string name="apert_codigo_apertura">Codigo Apertura</string>

</resources>
