<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarMovimientoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/lblTitRegMov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/lblTitRegistrarMovimiento" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblProducto"></TextView>

        <EditText
            android:id="@+id/edtxtProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />

        <TextView
            android:id="@+id/lblPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPrecio" />

        <EditText
            android:id="@+id/edtxtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />

        <TextView
            android:id="@+id/lblCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCantidad"
             />

        <EditText
            android:id="@+id/edtxtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar"
            >
        </Button>
    </LinearLayout>

</FrameLayout>