<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarApertureFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/txtTitleRegistAperture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registrar Apertura"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"
                 />

            <TextView
                android:id="@+id/txtSeparador4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/separador_title"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtlIdApertura"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark"
                >
                <EditText
                    android:id="@+id/edtxtIdAperture"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/apert_codigo_apertura"
                    android:inputType="textPersonName"
                    android:enabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark"
                >
                <EditText
                    android:id="@+id/edtxtFechaInicioapertura"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/apert_fecha_inicio_apertura"
                    android:inputType="text|date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imgbFechaInicioAperture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar_icons_48"></ImageButton>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/rdgEstado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

            <RadioButton
                android:id="@+id/rdbEstadoAbierta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="Abierta"
                android:checked="true"
                />
                <RadioButton
                    android:id="@+id/rdbEstadoCerrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Cerrada"
                    >
            </RadioButton>

            </RadioGroup>

            <CheckBox
                android:id="@+id/chkSincronizado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/apert_sincronizado" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgbSaveAperture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_save"
                    android:src="@drawable/btn_save" />

                <ImageButton
                    android:id="@+id/imgbCancelAperture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_cancel"
                    android:src="@drawable/btn_cancel" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</FrameLayout>